data/derived/sp14/progs/unify/prog3915.ml.out
Characters 13-33:
  let _ = eval (Average(VarX,VarY)), 0.0, 0.0;;
               ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
